--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -4,11 +4,11 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope
+  RESOURCE-GROUP: rg-eshoponweb-eastus
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 9004418c-018d-4d87-a0b3-23b94e846624
-  WEBAPP-NAME: devops-webapp-westeurope-2579230029
+  WEBAPP-NAME: devops-webapp-eastus-40239337
 
 
 jobs:
